# PotholeNet

./: .gitignore  CMakeLists.txt  PERFORMANCE_OPTIMIZATIONS.md  README.md  README_NATIVE_BRIDGE.md  api.py  api_v2_clusters.py  app.py  app_integration_example.py  background_clustering_worker.py  build_android.sh  build_windows.bat  clustering_service.py  database_migration_v2.2.sql  demo.py  deployment_config_v2.2.yaml  engine.py  index.html  map.js  poteholenet.py  potholenet.py  potholenet_core.cpp  potholenet_core.h  requirements.txt  setup_and_run.bat  setup_and_run.sh  test_auto_refresh.py  test_engine.py  test_map_markers.py  test_potholenet_core.cpp  test_production.js  visualise.py  visualize.py  web_server.py
data/: README.md  pothole_events.csv  smooth_road.csv
models/: README.md
scripts/: README.md  data_validator.py  train_model.py
static/js/: map.js
templates/: index.html
